⚡ Bolt: Optimize regex splitting and offload I/O to Virtual Threads
- Replaced expensive regex split with indexOf fast-path in computeTokenStyles
- Offloaded Ollama blocking I/O to Java 21+ Virtual Threads in EditorViewModel
- Replaced ListChangeListener with InvalidationListener in EditorViewController to avoid eager diff calculation
- Added .jules/bolt.md journal entry with learnings

Co-authored-by: tkpixel <49250195+tkpixel@users.noreply.github.com>